[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# include = [
#   "common/*.py",
#   "common/**/*.py",
#   "/tests",
# ]

# [tool.hatch.build.targets.sdist]
# include = [
#   "common/*.py",
#   "common/**/*.py",
#   "/tests",
# ]

[project]
name = "common"
description = "DATX common libraries and helper functions"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Kien Vu", email = "kien.vu@datx.com.vn" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

dependencies = []   

[project.urls]
"Homepage" = "https://git.datx.com.vn/rnd-group/common"

[tool.hatch.version]
path = "common/__about__.py"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore = ["E402"]
